--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -293,9 +293,9 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView2"
+                    android:id="@+id/cafeDetailReviewRecyclerView"
                     android:layout_width="0dp"
-                    android:layout_height="300dp"
+                    android:layout_height="500dp"
                     android:layout_marginTop="10dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
