--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -84,6 +84,16 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/image_registration" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cafeModifyImageRecyclerView"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="15dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/add_image_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/add_image_button"
+                    app:layout_constraintTop_toBottomOf="@+id/image_registration" />
+
                 <TextView
                     android:id="@+id/modifyImage_caution_textView1"
                     android:layout_width="wrap_content"
