--- a/app/src/main/res/layout/item_add_image.xml
+++ b/app/src/main/res/layout/item_add_image.xml
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/add_modify_imageView"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginTop="10dp"
