카페디테일페이지 별점 뷰페이저 프래그먼트 및 xml파일 생성

--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -245,7 +245,7 @@
                     android:background="@drawable/next_page"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/recyclerView3"
+                    app:layout_constraintStart_toEndOf="@+id/favoriteViewPager"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
@@ -254,7 +254,7 @@
                     android:layout_height="30dp"
                     android:background="@drawable/previous_page"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/recyclerView3"
+                    app:layout_constraintEnd_toStartOf="@+id/favoriteViewPager"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
