--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -14,16 +14,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
+        <Button
             android:id="@+id/cafe_search_input"
             android:layout_width="310dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/edge_top_back"
-            android:ems="10"
-            android:hint="이름, 주소 검색"
-            android:inputType="textPersonName"
+            android:textSize="18sp"
+            android:gravity="left|center_vertical"
+            android:text="이름, 주소 검색"
+            android:textColor="@color/gray"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             app:layout_constraintEnd_toEndOf="parent"
