--- a/app/src/main/res/layout/fragment_list_search.xml
+++ b/app/src/main/res/layout/fragment_list_search.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/requester_input"
+            android:id="@+id/search_input"
             android:layout_width="330dp"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
@@ -39,15 +39,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <Button
             android:id="@+id/search_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="5dp"
             android:background="@drawable/search"
-            app:layout_constraintBottom_toBottomOf="@+id/requester_input"
-            app:layout_constraintEnd_toEndOf="@+id/requester_input"
-            app:layout_constraintTop_toTopOf="@+id/requester_input" />
+            app:layout_constraintBottom_toBottomOf="@+id/search_input"
+            app:layout_constraintEnd_toEndOf="@+id/search_input"
+            app:layout_constraintTop_toTopOf="@+id/search_input" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
