--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -62,7 +62,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/button7"
+            android:id="@+id/cafe_modify_button"
             android:layout_width="34dp"
             android:layout_height="34dp"
             android:layout_marginEnd="20dp"
