--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -40,18 +40,20 @@
         android:textSize="16sp"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/requester_input"
+        app:layout_constraintStart_toEndOf="@+id/review_search_input"
         app:layout_constraintTop_toBottomOf="@+id/write_review" />
 
-    <EditText
-        android:id="@+id/requester_input"
+    <Button
+        android:id="@+id/review_search_input"
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/edge_top_back"
-        android:hint="이름, 주소 검색"
-        android:inputType="textPersonName"
+        android:textSize="18sp"
+        android:gravity="left|center_vertical"
+        android:text="이름, 주소 검색"
+        android:textColor="@color/gray"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:layout_constraintStart_toEndOf="@+id/backspace_button"
@@ -65,7 +67,7 @@
         android:background="#3B2314"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/requester_input" />
+        app:layout_constraintTop_toBottomOf="@+id/review_search_input" />
 
 
     <ScrollView
@@ -576,11 +578,11 @@
                     android:textColor="#000000"
                     android:textSize="25sp"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toStartOf="@+id/add_cafe_button"
+                    app:layout_constraintEnd_toStartOf="@+id/addTag_cafe_button"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
 
                 <Button
-                    android:id="@+id/add_cafe_button"
+                    android:id="@+id/addTag_cafe_button"
                     android:layout_width="60dp"
                     android:layout_height="35dp"
                     android:layout_marginTop="16dp"
