--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -149,6 +149,7 @@
                     android:text="즐겨찾기를 추가해 주세요."
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    android:visibility="invisible"
                     app:layout_constraintBottom_toBottomOf="@+id/favorite_recyclerView"
                     app:layout_constraintEnd_toEndOf="@+id/favorite_recyclerView"
                     app:layout_constraintStart_toStartOf="@+id/favorite_recyclerView"
@@ -156,8 +157,8 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/favorite_recyclerView"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="364dp"
+                    android:layout_height="167dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
