HomeFragment에서 1순위 해시태그의 카페목록 리싸이클러뷰 자바코드 생성

--- a/app/src/main/res/layout/item_home_taglist.xml
+++ b/app/src/main/res/layout/item_home_taglist.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="#F4E9DD"
+        app:cardBackgroundColor="@color/beige"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
         app:cardUseCompatPadding="true">
@@ -20,8 +20,8 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -31,9 +31,13 @@
 
                     <ImageView
                         android:id="@+id/cafe_image"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:layout_margin="20dp"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="5dp"
+                        android:background="@drawable/image_view_round"
                         app:srcCompat="@mipmap/ic_launcher" />
 
                     <LinearLayout
@@ -41,23 +45,15 @@
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <TextView
-                            android:id="@+id/textView13"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:text="평점 :"
-                            android:textColor="#000000"
-                            android:textStyle="bold" />
-
                         <RatingBar
                             android:id="@+id/rating_all"
                             style="@style/Widget.AppCompat.RatingBar.Small"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginTop="2dp"
-                            android:isIndicator="false"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="6dp"
+                            android:isIndicator="true"
                             android:numStars="5"
                             android:progressDrawable="@drawable/rating_custom"
                             android:stepSize="1"
@@ -75,24 +71,24 @@
                         android:id="@+id/cafeName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="7dp"
+                        android:layout_marginStart="10dp"
                         android:text="카페 이름"
-                        android:textColor="#000000"
-                        android:textSize="15sp"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/cafeAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="10dp"
                         android:text="카페 주소"
-                        android:textColor="#000000"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
@@ -100,30 +96,31 @@
                             android:id="@+id/tag1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
+                            android:layout_weight="1"
+                            android:layout_marginStart="10dp"
                             android:text="#태그1"
-                            android:textColor="#000000"
-                            android:textSize="20sp"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tag2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
+                            android:layout_weight="1"
                             android:text="#태그2"
-                            android:textColor="#000000"
-                            android:textSize="20sp"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tag3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="5dp"
+                            android:layout_weight="1"
                             android:text="#태그3  "
-                            android:textColor="#000000"
-                            android:textSize="20sp"
+                            android:textColor="@color/black"
+                            android:textSize="16sp"
                             android:textStyle="bold" />
                     </LinearLayout>
 
@@ -131,18 +128,19 @@
                         android:id="@+id/bestReview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="10dp"
                         android:text="Best Review"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
                         android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/bestReview_example"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="10dp"
                         android:text="학교 근처라 그런지 공부하는 학생이 많다. 개강 준비하며 커피 한잔하기 좋은 카페! ..."
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
                         android:textSize="12sp"
                         android:textStyle="bold" />
                 </LinearLayout>
