--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -25,7 +25,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/cafe_image"
+                    android:id="@+id/reviewProfile_image"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_margin="10dp"
@@ -38,14 +38,39 @@
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/nickName"
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="이름"
-                        android:textColor="#000000"
-                        android:textSize="20sp" />
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/nickName"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="이름"
+                            android:textColor="@color/black"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/review_modify"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginStart="190dp"
+                            android:text="수정" />
+
+                        <TextView
+                            android:id="@+id/review_delete"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginStart="10dp"
+                            android:text="삭제" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/level_and_location"
@@ -65,21 +90,21 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/image1"
+                    android:id="@+id/reviewMore_image1"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
                 <ImageView
-                    android:id="@+id/image2"
+                    android:id="@+id/reviewMore_image2"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
                     tools:srcCompat="@tools:sample/avatars" />
 
                 <ImageView
-                    android:id="@+id/image3"
+                    android:id="@+id/reviewMore_image3"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
