--- a/app/src/main/res/layout/item_mypage_bookmark.xml
+++ b/app/src/main/res/layout/item_mypage_bookmark.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="130dp"
+        android:layout_width="190dp"
         android:layout_height="50dp"
         app:cardBackgroundColor="#F9CC9A"
         app:cardCornerRadius="10dp"
@@ -17,12 +17,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
-            android:inputType="textMultiLine"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:singleLine="true"
             android:text="cafe_name"
             android:textColor="@color/brown"
-            android:textSize="10sp"
+            android:textSize="16sp"
             android:textStyle="bold" />
     </androidx.cardview.widget.CardView>
 
