--- a/app/src/main/res/layout/item_more_review.xml
+++ b/app/src/main/res/layout/item_more_review.xml
@@ -56,18 +56,18 @@
                             android:id="@+id/review_modify"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:clickable="true"
-                            android:layout_marginTop="2dp"
                             android:layout_marginStart="190dp"
+                            android:layout_marginTop="2dp"
+                            android:clickable="true"
                             android:text="수정" />
 
                         <TextView
                             android:id="@+id/review_delete"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:clickable="true"
-                            android:layout_marginTop="2dp"
                             android:layout_marginStart="10dp"
+                            android:layout_marginTop="2dp"
+                            android:clickable="true"
                             android:text="삭제" />
 
                     </LinearLayout>
@@ -86,7 +86,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -115,13 +115,13 @@
             <TextView
                 android:id="@+id/review_comment"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="리뷰 내용" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <Button
@@ -139,8 +139,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center|right"
                     android:text="0"
-                    android:textSize="20sp"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:textSize="20sp" />
             </LinearLayout>
 
         </LinearLayout>
