listSearch에서 최근검색 리싸이클러뷰 자바 코드 생성

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -87,7 +87,12 @@
         android:id="@+id/navigation_list_search"
         android:name="com.example.wmc.ui.Fragment.ListSearchFragment"
         android:label="@string/list_search"
-        tools:layout="@layout/fragment_list_search" />
+        tools:layout="@layout/fragment_list_search" >
+
+        <action
+            android:id="@+id/list_search_to_cafe_detail"
+            app:destination="@id/navigation_cafe_detail" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_cafe_registration"
