--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -296,10 +296,38 @@
                     android:layout_width="0dp"
                     android:layout_height="500dp"
                     android:layout_marginTop="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/moreReview9" />
+
+                <LinearLayout
+                    android:id="@+id/cafeDetailPage_footer"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="horizontal"
+                    android:padding="20dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cafeDetailReviewRecyclerView">
+
+                    <ImageView
+                        android:id="@+id/cafeDetailPage_footerLogo"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        android:src="@drawable/logo" />
+
+                    <TextView
+                        android:id="@+id/cafeDetailPage_footerTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="15dp"
+                        android:letterSpacing="-0.02"
+                        android:lineSpacingMultiplier="1.2"
+                        android:text="상호명: 위메카 We Make Cafe\n개발자: 임현승, 서현준, 송상화, 이재윤, 전현구\n이메일: suwonUni@gmail.com\n카카오톡: @위메카 친구 추가하고 소식을 받아보세요"
+                        android:textColor="@color/black"
+                        android:textSize="8dp" />
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
