ListCafeList 리싸이클러뷰 자바코드 생성

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -92,6 +92,9 @@
         <action
             android:id="@+id/list_search_to_cafe_detail"
             app:destination="@id/navigation_cafe_detail" />
+        <action
+            android:id="@+id/list_search_to_list_cafelist"
+            app:destination="@id/navigation_list_cafelist" />
     </fragment>
 
     <fragment
