--- a/app/src/main/res/layout/item_list_cafelist.xml
+++ b/app/src/main/res/layout/item_list_cafelist.xml
@@ -7,15 +7,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="115dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/cafeImage"
+            android:id="@+id/cafeList_cafeImage"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:background="@drawable/image_view_round"
             android:padding="2dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
@@ -23,24 +24,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/cafe_name_textView"
+                android:id="@+id/cafeList_cafe_name_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="카페이름"
-                android:textColor="#000000"
-                android:textSize="30sp" />
+                android:textColor="@color/black"
+                android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/cafe_address_textView"
+                android:id="@+id/cafeList_cafe_address_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="카페주소"
-                android:textColor="#000000"
-                android:textSize="15sp" />
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/black"
+                android:textSize="12sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -53,28 +56,29 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/yellow_button"
                     android:text="영업시간"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/white"
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/hashTag1"
+                    android:id="@+id/cafeList_hashTag1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="#해시태그1"
-                    android:textColor="#3B2314"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/brown"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/hashTag2"
+                    android:id="@+id/cafeList_hashTag2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="#해시태그2"
-                    android:textColor="#3B2314"
+                    android:textColor="@color/brown"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
