CafeDetail에서 카페대표이미지, 평점 뷰페이저 생성 및 예시데이터 삽입

--- a/app/src/main/res/layout/fragment_cafe_detail.xml
+++ b/app/src/main/res/layout/fragment_cafe_detail.xml
@@ -245,7 +245,7 @@
                     android:background="@drawable/next_page"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/favoriteViewPager"
+                    app:layout_constraintStart_toEndOf="@+id/ratingViewPager"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
@@ -254,12 +254,12 @@
                     android:layout_height="30dp"
                     android:background="@drawable/previous_page"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/favoriteViewPager"
+                    app:layout_constraintEnd_toStartOf="@+id/ratingViewPager"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.viewpager.widget.ViewPager
-                    android:id="@+id/favoriteViewPager"
+                    android:id="@+id/ratingViewPager"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="20dp"
