--- a/app/src/main/res/layout/viewpager_cafe_detail_image3.xml
+++ b/app/src/main/res/layout/viewpager_cafe_detail_image3.xml
@@ -10,9 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
+        android:background="@drawable/image_view_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/bean_grade1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
