--- a/app/src/main/res/layout/viewpager_cafe_detail_image1.xml
+++ b/app/src/main/res/layout/viewpager_cafe_detail_image1.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="5dp"
+        android:background="@drawable/image_view_round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
