--- a/app/src/main/res/layout/viewpager_rating_taste.xml
+++ b/app/src/main/res/layout/viewpager_rating_taste.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="맛"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -24,7 +24,7 @@
         android:layout_width="70dp"
         android:layout_height="50dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/taste_score"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewPager_tasteTextView" />
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="산미"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -47,8 +47,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="17dp"
-        android:isIndicator="false"
+        android:layout_marginTop="12dp"
+        android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="18dp"
-        android:isIndicator="false"
+        android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="10dp"
         android:text="디저트"
         android:textColor="@color/black"
         android:textStyle="bold"
@@ -99,8 +99,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="17dp"
-        android:isIndicator="false"
+        android:layout_marginTop="12dp"
+        android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
@@ -126,7 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="18dp"
-        android:isIndicator="false"
+        android:isIndicator="true"
         android:numStars="5"
         android:progressDrawable="@drawable/rating_custom"
         android:stepSize="1"
